
Mon Jan 24 16:42:29 CET 2005 Paolo Molaro <lupus@ximian.com>

	* gc-internal.h, null-gc.c, profiler.c, boehm-gc.c: hook the
	GC events to the profiler.

Mon Jan 24 15:59:54 CET 2005 Paolo Molaro <lupus@ximian.com>

	* gc.c: remove valgrind detection nonsense. Set GC_DONT_GC
	if you don't want the GC to run.

Mon Jan 24 15:53:25 CET 2005 Paolo Molaro <lupus@ximian.com>

	* Makefile.am, gc.c, mono-gc.h, boehm-gc.c, null-gc.c, gc-internal.h:
	start providing a GC API and keeping different implementations in
	their own file.
	* profiler.h, profiler.c, profiler-private.h: provide the GC events API.

2005-01-22  Ben Maurer  <bmaurer@ximian.com>

	* debug-mono-symfile.c (mono_debug_open_mono_symbol_file): Use
	mmap rather than allocating a huge buffer.
	(mono_debug_close_mono_symbol_file): Free the buffer allocated
	above.

2005-01-22  Sebastien Pouliot  <sebastien@ximian.com>

	* icall.c: Add new internal calls for SecurityManager.SecurityEnabled
	and CheckExecutionRights.
	* reflection.c|h: Keep the index of the declarative security to be 
	used, instead of the pointer, when AOT compiler is used. Also add 
	class initialization when requesting demands.
	* security-manager.c|h: Implement SecurityManager.SecurityEnabled and
	CheckExecutionRights. Both properties are now FALSE by default, and
	unmodifiable, unless the --security option is used.

Fri Jan 21 15:29:27 CET 2005 Paolo Molaro <lupus@ximian.com>

	* domain.c, appdomain.c, assembly.c, image.c, metadata-internals.h,
	reflection.c: properly refcount images and assemblies, many leaks fixed.

2005-01-20 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* threadpool.c: increase the timeout for threads in the thread pool to
	10s.  Fixes bug #67159.

2005-01-20  Bernie Solomon  <bernard@ugsolutions.com>

	* class-internals.h: Sun's compiler insists on explicit
	signed on bit fields to handle then correctly.

2005-01-19  Miguel de Icaza  <miguel@ximian.com>

	* file-io.c (ves_icall_System_IO_MonoIO_get_InvalidPathChars):